[workspace]
resolver = "3"
members = ["fileio", "lib", "memalloc", "proc", "proccred", "users_groups"]

[workspace.dependencies]
lib = { path = "./lib" }
users_groups = { path = "./users_groups" }

clap = { version = "4.5.53", features = ["derive"] }
nix = { version = "0.30.1", features = ["env", "feature", "fs", "process", "uio", "user"] }
