[workspace]
resolver = "3"
members = ["filebuff","fileio", "lib", "memalloc", "proc", "proccred", "sysinfo", "syslim", "time", "users_groups"]

[workspace.dependencies]
lib = { path = "./lib" }
time = { path = "./time" }
users_groups = { path = "./users_groups" }

chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
nix = { version = "0.30.1", features = ["env", "feature", "fs", "process", "resource", "time", "uio", "user"] }
