[workspace]
resolver = "3"
members = [
    "dirs_links",
    "filebuff",
    "fileio",
    "files",
    "inotify",
    "lib",
    "memalloc",
    "proc",
    "proccred", "signals",
    "sysinfo",
    "syslim",
    "time",
    "users_groups",
    "xattr",
]

[workspace.dependencies]
lib = { path = "./lib" }
time = { path = "./time" }
users_groups = { path = "./users_groups" }

chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
nix = { version = "0.30.1", features = [
    "dir",
    "env",
    "feature",
    "fs",
    "inotify",
    "process",
    "resource",
    "signal",
    "time",
    "uio",
    "user",
] }
xattr = "1.6.1"
